--- a/index.html
+++ b/index.html
@@ -210,13 +210,17 @@
                     <h4 class="text-xl font-bold text-gray-900 mb-3">Lighting Solutions</h4>
                     <p class="text-gray-600 leading-relaxed">Interior and exterior lighting design, LED retrofits, and smart home lighting installation.</p>
                 </div>
-                <!-- Service Card 4: Generator Install -->
+                <!-- Service Card 4: Dedicated Circuit Installation -->
                 <div class="bg-white p-8 rounded-xl shadow-sm hover:shadow-xl transition-all duration-300 border border-gray-100 group">
                     <div class="w-14 h-14 bg-yellow-100 rounded-lg flex items-center justify-center mb-6 group-hover:bg-yellow-500 transition-colors duration-300">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-yellow-600 group-hover:text-white transition-colors duration-300 w-8 h-8"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect><line x1="12" y1="9" x2="12" y2="15"></line><line x1="15" y1="12" x2="9" y2="12"></line></svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-yellow-600 group-hover:text-white transition-colors duration-300 w-8 h-8">
+                            <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
+                            <line x1="12" y1="9" x2="12" y2="15"></line>
+                            <line x1="15" y1="12" x2="9" y2="12"></line>
+                        </svg>
                     </div>
-                    <h4 class="text-xl font-bold text-gray-900 mb-3">Generator Install</h4>
-                    <p class="text-gray-600 leading-relaxed">Never lose power again. Whole-home generator installation and battery backup systems.</p>
+                    <h4 class="text-xl font-bold text-gray-900 mb-3">Dedicated Circuit Installation</h4>
+                    <p class="text-gray-600 leading-relaxed">Safe and reliable installation of dedicated circuits for EV chargers, HVAC systems, kitchen appliances, and other high-power devices.</p>
                 </div>
             </div>
             
