--- a/index.html
+++ b/index.html
@@ -316,14 +316,19 @@
                             </div>
                         </div>
 
-                        <!-- Service Needed -->
+                       <!-- Service Needed -->
                         <div>
                             <label for="service" class="block text-sm font-medium text-gray-700 mb-2">Service Needed</label>
                             <select id="service" name="service" class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:ring-2 focus:ring-yellow-500 focus:border-transparent transition-colors">
                                 <option>Service/Panel Upgrade</option>
-                                <option>General Repair</option>
+                                <option>Service Entrance Cable Replacement</option>
+                                <option>EV Charger Installation</option>
+                                <option>Sub-panel Installation</option>
+                                <option>Whole House Rewiring/New Construction</option>
+                                <option>Dedicated Circuit Installation</option>
                                 <option>Lighting Installation</option>
-                                <option>New Construction</option>
+                                <option>Smart Switch/Outlet Installation</option>
+                                <option>General Repair</option>
                                 <option>Other</option>
                             </select>
                         </div>
@@ -331,7 +336,7 @@
                         <!-- Message (Optional) -->
                         <div>
                             <label for="message" class="block text-sm font-medium text-gray-700 mb-2">Message <span class="text-gray-400 font-normal">(Optional)</span></label>
-                            <textarea rows="4" id="message" name="message" class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:ring-2 focus:ring-yellow-500 focus:border-transparent transition-colors" placeholder="Tell us about your electrical issue..."></textarea>
+                            <textarea rows="3" id="message" name="message" class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:ring-2 focus:ring-yellow-500 focus:border-transparent transition-colors" placeholder="Tell us about your electrical issue..."></textarea>
                         </div>
 
                         <button type="submit" class="px-6 py-4 rounded-md font-bold transition-all duration-300 focus:outline-none focus:ring-2 focus:ring-offset-2 bg-yellow-500 hover:bg-yellow-400 text-black focus:ring-yellow-500 w-full text-lg">Send Message</button>
@@ -358,12 +363,6 @@
                     </p>
                     <div class="flex space-x-4">
                         <!-- Social placeholders -->
-                        <div class="w-10 h-10 rounded-full bg-gray-800 flex items-center justify-center hover:bg-yellow-500 hover:text-black transition-colors cursor-pointer">
-                          <span class="font-bold text-sm">FB</span>
-                        </div>
-                        <div class="w-10 h-10 rounded-full bg-gray-800 flex items-center justify-center hover:bg-yellow-500 hover:text-black transition-colors cursor-pointer">
-                           <span class="font-bold text-sm">IN</span>
-                        </div>
                     </div>
                 </div>
                 
